# MCP-Tools-for-Automotive-Website-Data-Extraction

./: .gitignore  DCD_extract_tool.md  README.md  dcdclient.py  langchain_demo.py  modeloutput.json  pyproject.toml  shot.json  test_con.py
chrome-devtools-mcp/: package-lock.json
chrome-devtools-mcp/src/tools/: dcd_extract.ts  script.ts
